[package]
name = "apod-nasa-scraper-rs"
version = "0.1.0"
authors = ["Max Gonzih <gonzih@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
async-std = { version = "1.11.0", features = ["unstable", "attributes"] }
clap = { version = "3.1.6", features = ["derive"] }
log = { version = "0.4.16", features = ["kv_unstable"] }
femme = "2.1.1"
crabler = "0.1.27"
# crabler ={ path = "/home/gnzh/mydev/crabler", features = ["debug"] }
# crabler ={ path = "/home/gnzh/mydev/crabler", features = [] }
